  LocalDate hash code meets criteria of the racy single-check idiom

- Support Appendable throughout printing
  Ensure that Appendable can be used efficiently in printing [#120, #121, #122]
  No API change

- Increased performance of chronology lookup [#126,#105]
  No API change

- Increased performance of formatter lookup [#127,#129]
  No API change


Compatibility with 2.3
----------------------
Build system - Yes

Binary compatible - Yes

Source compatible - Yes

Serialization compatible - Yes

Data compatible - Yes, except
 - DateTimeZone data updated to version 2013d

Semantic compatible - Yes, except
- DateTimeField duration fields have been fixed
  For example, yearOfEra() now has a range of eras() rather than null
  The DurationField instances now compare using equals() correctly
- MutableDateTime.add(DateTimeFieldType,int), addDays(int) and friends [#77]
  Adding zero will no longer change the offset during DST overlap in autumn/fall


Deprecations since 2.3
----------------------


Bug fixes since 2.3
-------------------
- DateTimeField.getDurationField() / DateTimeField.getRangeDurationField() [#92,#93,#95]
  Previously some of the complex cases were wrong, notably around centuries and eras
  For example, yearOfEra() returned a range of null when it should be eras()
  A slew of tests were added and a variety of bugs fixed
  This affects DateTimeField.getDurationField() and DateTimeField.getRangeDurationField()

- DateTimeUtils.isContiguous(ReadablePartial) [#89]
  The isContiguous() method could throw a NullPointerException when evaluating weird partials

- Period.normalizedStandard(PeriodType) [#79]
  Fix handling of PeriodType when either years or months missing

- Partial.with(DateTimeFieldType,int) [#88]
  Validation in this method was not as thorough as that in the constructor
  This allowed invalid partials to be created

- MutableDateTime.add(DateTimeFieldType,int), addDays(int) and friends [#77]